test/types/type_variables/diten/assignValToTypeVar.good
assignValToTypeVar.chpl:2: error: cannot assign value to type variable
