test/types/type_variables/diten/assignValToTypeVar.future
bug: assigning values to type variables is not an error.
